# 1

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  letter.md  letter_from_user.md  pyproject.toml
data/: Enchiridion.txt  enchiridion_passages.json  enchiridion_prompts.json
docs/: importance_scoring.md  session_context_transfer.md
docs/design/: chunking.md  memory.md  session_recap.md  sessions.md
docs/ideas/: adaptive_temperature.md  automatic_extraction.md  boredom.md  coherence_detection.md  intrusive_recall.md  memory_activation.md  pinned_memories.md  prompt_distillation.md  session_recap.md  synthetic_diversity.md
mindloop/: __init__.py  agent.py  chunker.py  client.py  extractor.py  memory.py  memory_tools.py  merge_llm.py  message_tools.py  messages.py  quotes.py  recap.py  semantic_memory.py  summarizer.py  system_prompt.md  tools.py  util.py
mindloop/cli/: agent.py  build.py  chat.py  chunk.py  dump.py  extract.py  message.py  query.py  recap.py  sessions.py
mindloop/data/: enchiridion_prompts.json  stoic-quotes.json
scripts/: collect_artifacts.sh  extract_enchiridion.py
tests/: test_agent.py  test_build.py  test_chunker.py  test_cli_agent.py  test_cli_sessions.py  test_client.py  test_extractor.py  test_memory.py  test_memory_tools.py  test_merge_llm.py  test_messages.py  test_query.py  test_quotes.py  test_recap.py  test_semantic_memory.py  test_summarizer.py  test_tools.py
