[project]
name = "mindloop"
version = "0.1.0"
description = "Autonomous agent toolkit powered by OpenRouter."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy",
]

[project.scripts]
mindloop-agent = "mindloop.cli.agent:main"
mindloop-chat = "mindloop.cli.chat:main"
mindloop-chunk = "mindloop.cli.chunk:main"
mindloop-build = "mindloop.cli.build:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
